# vsag

./: .clang-tidy  .codecov.yml  .gitignore  CMakeLists.txt  DEVELOPMENT.md  Makefile  README.md
src/: CMakeLists.txt  base_filter_functor.h  bitset_impl.cpp  bitset_impl_test.cpp  byte_buffer.h  common.h  constants.cpp  dataset_impl.cpp  dataset_impl.h  dataset_impl_test.cpp  default_allocator.cpp  default_allocator_test.cpp  default_thread_pool.cpp  default_thread_pool.h  engine.cpp  factory.cpp  factory_test.cpp  footer.cpp  footer_test.cpp  index_feature_list.cpp  index_feature_list.h  index_feature_list_test.cpp  inner_string_params.h  label_table.h  lock_strategy.cpp  lock_strategy.h  logger_test.cpp  options.cpp  options_test.cpp  parameter.h  parameter_check.cpp  parameter_generator.cpp  parameter_test.h  prefetch.cpp  prefetch.h  prefetch_test.cpp  resource.cpp  resource_owner_wrapper.h  safe_allocator.h  safe_allocator_test.cpp  (+10 more)
src/algorithm/: brute_force.cpp  brute_force.h  brute_force_parameter.cpp  brute_force_parameter.h  hgraph.cpp  hgraph.h  hgraph_parameter.cpp  hgraph_parameter.h  inner_index_interface.cpp  inner_index_interface.h  ivf.cpp  ivf.h  ivf_nearest_classify_test.cpp  ivf_nearest_partition.cpp  ivf_parameter.cpp  ivf_parameter.h  ivf_parameter_test.cpp  ivf_partition_strategy.h  pyramid.cpp  pyramid.h  pyramid_zparameters.cpp  pyramid_zparameters.h  pyramid_zparameters_test.cpp  sparse_index.cpp  sparse_index.h  sparse_index_parameters.cpp  sparse_index_parameters.h
src/data_cell/: bucket_datacell.h  bucket_datacell_parameter.cpp  bucket_datacell_parameter.h  bucket_datacell_parameter_test.cpp  bucket_datacell_test.cpp  bucket_interface.cpp  bucket_interface.h  extra_info_datacell.cpp  extra_info_datacell.h  extra_info_datacell_parameter.cpp  extra_info_datacell_parameter.h  extra_info_datacell_test.cpp  extra_info_interface.cpp  extra_info_interface.h  extra_info_interface_test.cpp  extra_info_interface_test.h  flatten_datacell.h  flatten_datacell_parameter.cpp  flatten_datacell_parameter.h  flatten_datacell_test.cpp  flatten_interface.cpp  flatten_interface.h  flatten_interface_test.cpp  graph_datacell.h  graph_datacell_parameter.cpp  graph_datacell_parameter.h  graph_datacell_test.cpp  graph_interface.cpp  graph_interface.h  graph_interface_parameter.cpp  graph_interface_parameter.h  graph_interface_test.cpp  sparse_graph_datacell.cpp  sparse_graph_datacell.h  sparse_graph_datacell_test.cpp
src/factory/: factory.cpp  factory_test.cpp
src/impl/: basic_searcher.cpp  basic_searcher.h  basic_searcher_test.cpp  conjugate_graph.cpp  conjugate_graph.h  conjugate_graph_test.cpp  elias_fano_encoder.cpp  elias_fano_encoder.h  elias_fano_encoder_test.cpp  kmeans_cluster.cpp  kmeans_cluster.h  kmeans_cluster_test.cpp  odescent_graph_builder.cpp  odescent_graph_builder.h  odescent_graph_builder_test.cpp  odescent_graph_parameter.cpp  odescent_graph_parameter.h  odescent_graph_parameter_test.cpp  principal_component_analysis.cpp  principal_component_analysis.h  principal_component_analysis_test.cpp  pruning_strategy.cpp  pruning_strategy.h  random_orthogonal_matrix.cpp  random_orthogonal_matrix.h  random_orthogonal_matrix_test.cpp
src/index/: brute_force.cpp  brute_force.h  brute_force_parameter.cpp  brute_force_parameter.h  diskann.cpp  diskann.h  diskann_test.cpp  diskann_zparameters.cpp  diskann_zparameters.h  diskann_zparameters_test.cpp  hgraph_index.cpp  hgraph_index.h  hgraph_index_zparameters.cpp  hgraph_index_zparameters.h  hgraph_zparameters.cpp  hgraph_zparameters_test.cpp  hnsw.cpp  hnsw.h  hnsw_test.cpp  hnsw_zparameters.cpp  hnsw_zparameters.h  hnsw_zparameters_test.cpp  index_commom_param_test.cpp  index_common_param.cpp  index_common_param.h  index_impl.h  iterator_filter.cpp  iterator_filter.h  iterator_filter_test.cpp  pyramid.cpp  pyramid.h  pyramid_zparameters.cpp  pyramid_zparameters.h  pyramid_zparameters_test.cpp
src/io/: CMakeLists.txt  async_io.cpp  async_io.h  async_io_parameter.cpp  async_io_parameter.h  async_io_test.cpp  basic_io.h  basic_io_test.cpp  basic_io_test.h  buffer_io.h  buffer_io_parameter.cpp  buffer_io_parameter.h  buffer_io_test.cpp  direct_io_object.h  io_context.h  io_headers.h  io_parameter.cpp  io_parameter.h  memory_block_io.h  memory_block_io_parameter.cpp  memory_block_io_parameter.h  memory_block_io_parameter_test.cpp  memory_block_io_test.cpp  memory_io.h  memory_io_parameter.cpp  memory_io_parameter.h  memory_io_parameter_test.cpp  memory_io_test.cpp
src/quantization/: CMakeLists.txt  computer.h  fp32_quantizer.h  fp32_quantizer_parameter.cpp  fp32_quantizer_parameter.h  fp32_quantizer_parameter_test.cpp  fp32_quantizer_test.cpp  quantizer.h  quantizer_headers.h  quantizer_parameter.cpp  quantizer_parameter.h  quantizer_test.h  scalar_quantization_trainer.cpp  sq4_uniform_quantizer.h  sq4_uniform_quantizer_test.cpp  sq8_uniform_quantizer.h
src/simd/: CMakeLists.txt  avx.cpp  avx2.cpp  avx512.cpp  basic_func.cpp  basic_func.h  basic_func_test.cpp  bf16_simd.cpp  bf16_simd.h  bf16_simd_test.cpp  fp16_simd.cpp  fp16_simd.h  fp16_simd_test.cpp  fp32_simd.cpp  fp32_simd.h  fp32_simd_test.cpp  generic.cpp  normalize.cpp  normalize.h  normalize_test.cpp  rabitq_simd.cpp  rabitq_simd.h  rabitq_simd_test.cpp  simd.cpp  simd.h  simd_test.cpp  sq4_simd.cpp  sq4_simd.h  sq4_simd_test.cpp  sq4_uniform_simd.cpp  sq4_uniform_simd.h  sq4_uniform_simd_test.cpp  sq8_simd.cpp  sq8_simd.h  sq8_simd_test.cpp  sq8_uniform_simd.cpp  sq8_uniform_simd.h  sq8_uniform_simd_test.cpp  sse.cpp
src/utils/: distance_heap.h  distance_heap_test.cpp  function_exists_check.h  linear_congruential_generator.h  memmove_heap.cpp  memmove_heap.h  resource_object_pool.h  slow_task_timer.cpp  standard_heap.cpp  standard_heap.h  timer.cpp  timer.h  util_functions.cpp  util_functions.h  visited_list.h  visited_list_test.cpp
tools/eval/: CMakeLists.txt  build_eval_case.cpp  build_eval_case.h  common.h  eval_case.cpp  eval_case.h  eval_config.cpp  eval_config.h  eval_dataset.cpp  eval_dataset.h  eval_job.cpp  eval_job.h  eval_template.yaml  (+3 more)
(+157 files in other folders)
